--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+  <title>Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
 
 <!-- Meta Name Description -->
-<meta name="description" content="Awera Visuals provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
+<meta name="description" content="Awera Surprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="awera visuals services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
+<meta name="keywords" content="awera surprises services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
 
 <!-- Meta Author -->
-<meta name="author" content="Awera Visuals" />
+<meta name="author" content="Awera Surprises" />
 
 <!-- Extra Meta for SEO and Social Sharing -->
 
@@ -25,31 +25,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Twitter Meta Tags -->
-<meta name="twitter:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta name="twitter:site" content="@aweravisuals" />
-<meta name="twitter:creator" content="@aweravisuals" />
+<meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:site" content="@awerasurprises" />
+<meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="Discover Awera Visuals' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta name="twitter:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
+<meta name="twitter:description" content="Discover Awera Surprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
 
 <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
-<meta property="og:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta property="og:site_name" content="Awera Visuals" />
+<meta property="og:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:site_name" content="Awera Surprises" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.aweravisuals.com/" />
-<meta property="og:description" content="Explore Awera Visuals' Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta property="og:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
-<meta property="article:publisher" content="https://www.facebook.com/aweravisuals/" />
+<meta property="og:url" content="https://www.awerasurprises.com/" />
+<meta property="og:description" content="Explore Awera Surprises' 123 Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
+<meta property="article:publisher" content="https://www.facebook.com/awerasurprises/" />
 
 <!-- Structured Data (Schema.org Business) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Service",
-  "name": "Awera Visuals: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
+  "name": "Awera Surprises: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
   "provider": {
     "@type": "LocalBusiness",
-    "name": "Awera Visuals",
+    "name": "Awera Surprises",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "5833 Fairglen Ave, Fossil Creek",
@@ -59,10 +59,10 @@
       "addressCountry": "US"
     },
     "telephone": "254-339-3137",
-    "url": "https://www.aweravisuals.com",
+    "url": "https://www.awerasurprises.com",
     "sameAs": [
-      "https://www.facebook.com/aweravisuals",
-      "https://www.instagram.com/aweravisuals"
+      "https://www.facebook.com/awerasurprises",
+      "https://www.instagram.com/awerasurprises"
     ]
   },
   "serviceType": [
@@ -128,11 +128,11 @@
 </script>
 
 <!-- Canonical URL -->
-<link rel="canonical" href="https://www.aweravisuals.com" />
+<link rel="canonical" href="https://www.awerasurprises.com" />
 
 <!-- Language and Alternate Links -->
-<link rel="alternate" hreflang="x-default" href="https://www.aweravisuals.com" />
-<link rel="alternate" hreflang="en-us" href="https://www.aweravisuals.com" />
+<link rel="alternate" hreflang="x-default" href="https://www.awerasurprises.com" />
+<link rel="alternate" hreflang="en-us" href="https://www.awerasurprises.com" />
 
 
   <!-- Extra Meta for SEO and Social Sharing: Stop-->
@@ -175,9 +175,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Aweralogo-White.png" alt="index.html">
-        <!-- 2 Colour green and black logo <h1 class="sitename">Awera<span> Visuals</span></h1> -->
-        <h1 class="sitename">Awera Visuals</h1>
+        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
+        <!-- 2 Colour green and black logo <h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -223,8 +223,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
 
-        <h1><b>Welcome to Awera Visuals</b></h1>
-        <p>Your trusted go-to partner for beautiful balloons and luxury money bouquets in the Dallas Fort Worth (DFW), Texas area. At Awera Visuals, we transform ordinary moments into unforgettable memories. From full-service <b>event planning</b> to <b>stunning balloon and venue decorations</b>, to <b>beautifully crafted luxury money bouquets</b>, we bring creativity, elegance, and personalized detail to every celebration.</p>
+        <h1><b>Welcome to Awera Surprises</b></h1>
+        <p>Your trusted go-to partner for beautiful balloons and luxury money bouquets in the Dallas Fort Worth (DFW), Texas area. At Awera Surprises, we transform ordinary moments into unforgettable memories. From full-service <b>event planning</b> to <b>stunning balloon and venue decorations</b>, to <b>beautifully crafted luxury money bouquets</b>, we bring creativity, elegance, and personalized detail to every celebration.</p>
         <p>Let us bring your vision to life—with style!</p>       
         </br>
         <a href="services.html" class="btn-get-started">Get Started</a>
@@ -373,9 +373,9 @@
      <!-- I added-->
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Aweralogo-White.png" alt="index.html">
-        <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
-        <h1 class="sitename">Awera Visuals</h1>
+        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
       </a>
              <!-- I added-->
           
@@ -388,8 +388,8 @@
             <h4>Contact</h4>
             <p>
              <strong>Phone:</strong> <a href="tel: +1 254 339 3137"> +1 254 339 3137</a></br>
-              <strong>Email:</strong> <a href="mailto:sales@aweravisuals.com?subject=Book%20Awera%20Visuals" class=""> <span>sales@aweravisuals.com</span></a> <br>
-                 <strong>Instagram:</strong> <a href="https://www.instagram.com/aweravisuals"> aweravisuals </a></br>
+              <strong>Email:</strong> <a href="mailto:awerasurprises@gmail.com?subject=Book%20Awera%20Surprises" class=""> <span>awerasurprises@gmail.com</span></a> <br>
+                 <strong>Instagram:</strong> <a href="https://www.instagram.com/awerasurprises"> awerasurprises </a></br>
                     <strong>Location:</strong> <a href="https://support.crunchbase.com/hc/en-us/articles/360010016393-What-cities-are-in-the-Dallas-Fort-Worth-region"> Servicing all Dallas Fort Worth, TX Metroplex Cities</a></br>
              </p>
           </div>
@@ -409,10 +409,10 @@
         <!--      <div class="col-lg-3 col-md-6"> Block -->  
        <!-- Block  <h4>Follow Us</h4>  Block -->  
         <!-- Block         <div class="social-links d-flex"> Block -->  
-           <!-- Block     <a href="https://www.linkedin.com/company/aweravisuals" class="linkedin"><i class="bi bi-linkedin"></i></a>   Block -->  
-            <!--       <a href="https://www.tiktok.com/@aweravisuals_" class="tiktok"><i class="bi bi-tiktok"></i></a>   Block -->  
-            <!--      <a href="https://www.instagram.com/aweravisuals" class="instagram"><i class="bi bi-instagram"></i></a>    Block -->  
-            <!--       <a href="https://www.aweravisuals.com" class="facebook"><i class="bi bi-facebook"></i></a>    Block -->  
+           <!-- Block     <a href="https://www.linkedin.com/company/awerasurprises" class="linkedin"><i class="bi bi-linkedin"></i></a>   Block -->  
+            <!--       <a href="https://www.tiktok.com/@awerasurprises" class="tiktok"><i class="bi bi-tiktok"></i></a>   Block -->  
+            <!--      <a href="https://www.instagram.com/awerasurprises" class="instagram"><i class="bi bi-instagram"></i></a>    Block -->  
+            <!--       <a href="https://www.awerasurprises.com" class="facebook"><i class="bi bi-facebook"></i></a>    Block -->  
            <!--     </div>  Block -->  
         </div>
 
@@ -422,14 +422,14 @@
     <div class="container copyright text-center mt-4">
       <p>© <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script></p>
       <div class="credits">
-        Designed for <a href="https://www.aweravisuals.com">Awera Visuals</a>
+        Designed for <a href="https://www.awerasurprises.com">Awera Surprises</a>
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="https://www.aweravisuals.com/home" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="https://www.awerasurprises.com/home" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
