--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="container section-title" data-aos="fade-up">
 
         <h1><b>Welcome to Awera Surprises</b></h1>
-        <p>Your trusted go-to partner for beautiful balloons and luxury money bouquets in the Dallas Fort Worth (DFW), Texas area. At Awera Surprises, we transform ordinary moments into unforgettable memories. From full-service <b>event planning</b> to <b>stunning balloon and venue decorations</b>, to <b>beautifully crafted luxury money bouquets</b>, we bring creativity, elegance, and personalized detail to every celebration.</p>
+        <p>Your trusted go-to partner for beautiful balloons and luxury money bouquets in the Dallas Fort Worth (DFW), Texas area. At Awera Surprises, we transform ordinary moments into unforgettable memories. From full-service <b>event planning</b> to <b>stunning balloon decorations</b>, to <b>beautifully crafted luxury money bouquets</b>, we bring creativity, elegance, and personalized detail to every celebration.</p>
         <p>Let us bring your vision to life—with style!</p>       
         </br>
         <a href="services.html" class="btn-get-started">Get Started</a>
