--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; width: 100%;">
 <iframe 
-    src="https://www.canva.com/design/DAGeJzvff-U/FJLL8zTc18S56EXTA3eFFw/watch?utm_content=DAGeJzvff-U&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hd6539aa87e" 
+    src="https://www.canva.com/design/DAGeJzvff-U/KErTC0LVl0eWip02mijBSA/watch" 
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
     frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
