--- a/about.html
+++ b/about.html
@@ -291,7 +291,7 @@
                 <div class="row gy-4">
                   <div class="col-lg-12">
                     <!-- <img src="assets/img/image14.jpg" class="img-fluid" alt=""> -->
-                    <img src="assets/img/BlueBalloon.png" class="img-fluid" alt="">
+                    <img src="assets/img/BlueBalloon2.png" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
                     <!-- <img src="assets/img/tractor1.1.jpg" class="img-fluid" alt=""> -->
