--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ https://www.canva.com/design/DAGeJzvff-U/KErTC0LVl0eWip02mijBSA/watch
             <p>
              <strong>Phone:</strong> <a href="tel: +1 254 339 3137"> +1 254 339 3137</a></br>
                <strong>Order Form:</strong> <a href="https://forms.gle/XcXYMa2fynW38vpv6"> Book Now </a></br>
-                <strong>Email:</strong> <a href="mailto:awerasurprises@gmail.com?subject=Book%20Awera%20Surprises" class=""> <span>awerasurprises@gmail.com</span></a> <br>
+                <!-- <strong>Email:</strong> <a href="mailto:awerasurprises@gmail.com?subject=Book%20Awera%20Surprises" class=""> <span>awerasurprises@gmail.com</span></a> <br> -->
                  <strong>Instagram:</strong> <a href="https://www.instagram.com/awerasurprises"> awerasurprises </a></br>
                   <strong>TikTok:</strong> <a href="https://www.tiktok.com/@awerasurprises"> awerasurprises </a></br>
                     <strong>Location:</strong> <a href="https://support.crunchbase.com/hc/en-us/articles/360010016393-What-cities-are-in-the-Dallas-Fort-Worth-region"> Servicing all Dallas Fort Worth, TX Metroplex Cities</a></br>
