--- a/index.html
+++ b/index.html
@@ -211,8 +211,15 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
     allowfullscreen>     
 </iframe> --> 
-  <img src="assets/img/Aweralogo-White.png" alt="index.html">
+  
+  <1-- TEST THIS LOGO AND ITS WORKED BY ITSELF <img src="assets/img/Aweralogo-White.png" alt="index.html"> -->
 
+    src="https://www.canva.com/design/DAGeJzvff-U/KErTC0LVl0eWip02mijBSA/view?embed"
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+    frameborder="0"
+    allowfullscreen="allowfullscreen"
+    allow="fullscreen">
+  </iframe>
 </div>
 
 
