--- a/index.html
+++ b/index.html
@@ -212,8 +212,9 @@
     allowfullscreen>     
 </iframe> --> 
   
-  <1-- TEST THIS LOGO AND ITS WORKED BY ITSELF <img src="assets/img/Aweralogo-White.png" alt="index.html"> -->
-
+  <!-- TEST THIS LOGO AND ITS WORKED BY ITSELF <img src="assets/img/Aweralogo-White.png" alt="index.html"> -->
+<img src="assets/img/GoldBanner.png" alt="index.html">
+22222  
     src="https://www.canva.com/design/DAGeJzvff-U/KErTC0LVl0eWip02mijBSA/view?embed"
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
     frameborder="0"
