--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 </i> 
               </div>
               <a href="services.html" class="stretched-link">
-                <h3>Balloons</h3>
+                <h3>Elegant Balloons</h3>
               </a>
               <p>Elegant and eye-catching balloon columns tailored to match your event theme, colors, and vibe—perfect for entrances, stages, photo backdrops, or statement decor.</p>
                </br>
