--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
 
             
              <!-- Paragraph 3 --> 
-            <p>The name <b>"Awera"</b>, meaning <b>"beautiful"</b> in Yoruba, reflects our passion for crafting luxury money bouquets and stunning balloon decorations that leave you saying “wow.” Book your next event with Awera Surprises and leave your guests overwhelmed with joy and unforgettable memories.</p>
+            <p>The name <b>"Awera"</b>, meaning <b>"beautiful"</b> in Yoruba, reflects our passion for crafting luxury money bouquets and stunning balloon decorations that leave you saying “wow.” Book your next event with Awera Surprises for pleasant surprises and unforgettable memories.</p>
         
 
           <a href="services.html" class="btn-get-started">View our services now</a>
