--- a/services.html
+++ b/services.html
@@ -176,8 +176,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/Aweralogo-White.png" alt="index.html">
-        <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
-        <h1 class="sitename">Awera Visuals</h1>
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -227,7 +227,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
       <div class="credits">
-        <p>At <b>Awera Visuals</b>, we are dedicated to transforming your ideas into beautiful visual reality. From <b>thorough event planning to beautiful event decorations to luxury money bouquets</b>, we bring your vision to life with creativity and precision.</p>
+        <p>At <b>Awera Surprises</b>, we are dedicated to transforming your ideas into beautiful visual reality. From <b>thorough event planning to beautiful event decorations to luxury money bouquets</b>, we bring your vision to life with creativity and precision.</p>
         <p><a href="contact.html" class="btn-get-started">Contact us</a> today to bring your event vision to life.</p>
      </br>
         <p>Explore our full range of services and pricing below.     
