Update company name from 'Awera Visuals' to 'Awera Surprises'

--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>About</h1>
-              <p class="mb-0">At Awera Visuals, we are passionate about creating elegant balloon decorations and luxury money bouquets for personal and corporate events.</p>
+              <p class="mb-0">At Awera Surprises, we are passionate about creating elegant balloon decorations and luxury money bouquets for personal and corporate events.</p>
             </div>
           </div>
         </div>
@@ -230,7 +230,7 @@
             <!-- Paragraph 4 --> 
             <h2>Meet our Founder</h2>
 
-            <p>Awera Visuals was initially <b>founded by </b>Elizabeth, also known as <b>Lizzy </b> POPM MSc FCCA BA in London, UK before a brand refresh and expansion to Dallas, TX. Lizzy is a seasoned professional with a strong background in data analytics, finance, and creative design.</p> 
+            <p>Awera Surprises was initially <b>founded by </b>Elizabeth, also known as <b>Lizzy </b> POPM MSc FCCA BA in London, UK before a brand refresh and expansion to Dallas, TX. Lizzy is a seasoned professional with a strong background in data analytics, finance, and creative design.</p> 
               
               <p>She holds the following credentials:</p>
               <ul>
@@ -294,7 +294,7 @@
           <div class="col-lg-5 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <h3>Our Purpose</h3>
             <p>Our services range from photography to 360 tours to videography and headshots tailored to meet the unique needs of real estate agents, developers, government entities, and large businesses. We understand the demands of large-scale projects and ensure that every detail is meticulously planned and executed. </p>
-            <p>At Awera Visuals, we believe that every project is an opportunity to create something beautiful. Our team collaborates closely with clients, offering flexible and custom solutions that exceed expectations.</p>
+            <p>At Awera Surprises, we believe that every project is an opportunity to create something beautiful. Our team collaborates closely with clients, offering flexible and custom solutions that exceed expectations.</p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-easel flex-shrink-0"></i>
