--- a/contact.html
+++ b/contact.html
@@ -200,8 +200,9 @@
 
       <div class="credits">
         <p>Wow your guests or surprise someone with beautiful balloons or luxury bouquets. Let us turn your ideas into unforgettable moments with our <b>professional event planning, eye-catching yet affordable balloon decorations, and stunning luxury money bouquets.</b></p>
-        <p>We’re excited to help you create unforgettable visuals that elevate both your events and your gifting experience.</p>
-        <p>Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
+        <p>We’re excited to help you create unforgettable memories that elevate both your events and your gifting experience.</p>
+        <p>Ready to make it happen? Click on our order form: <a href="https://forms.gle/XcXYMa2fynW38vpv6" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
+        TO DELETE <<p>Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
       </div> 
         <br>
 
