--- a/portfolio.html
+++ b/portfolio.html
@@ -176,8 +176,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/Aweralogo-White.png" alt="index.html">        
-        <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
-        <h1 class="sitename">Awera Visuals</h1>
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -209,7 +209,7 @@
             <div class="col-lg-8">
               <h1>Portfolio</h1>
               <!-- <p class="mb-0">Explore a sample of our work and see how we have helped clients create stunning visuals. </p> -->
-             <p class="mb-0">Take your events & gifting to the next level with Awera Visuals – where every detail is crafted to perfection! </p>
+             <p class="mb-0">Take your gifting to the next level with Awera Surprises – where every gift detail is crafted to perfection! </p>
             </div>
           </div>
         </div>
@@ -236,7 +236,7 @@
 
           <p>Get inspired by our curated portfolio showcasing the creativity and elegance behind every design. Scroll down to explore our <b>eye-catching event decorations</b> and <b>beautifully crafted luxury money bouquets</b>, each made to leave a lasting great impression.</p>
 
-          <p>1) <b></b><a href="portfolio.html#eventdecorations">Eye-catching Event Decorations</a></p>
+          <p>1) <b></b><a href="portfolio.html#elegantballoons">Eye-catching Elegant Balloons</a></p>
           <p>2) <b></b><a href="portfolio.html#moneybouquet">Luxury Money Bouquets</a></p>
 
 
@@ -244,7 +244,7 @@
           
 
     <!-- Real Estate Section -->
-    <section id="eventdecorations" class="real-estate section">        
+    <section id="elegantballoons" class="real-estate section">        
 
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
@@ -252,7 +252,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Event Decorations</h1>
+              <h1>Elegant Ballooons</h1>
             </div>
           </div>
         </div>
