--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+  <title>Services | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
 
 <!-- Meta Name Description -->
 <meta name="description" content="Awera Surprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
