--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:site" content="@awerasurprises" />
-<meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />" />
+<meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Discover Awera Surprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
