--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
     allowfullscreen>     
 </iframe> --> 
-  
+
+  <iframe 
   <!-- TEST THIS LOGO AND ITS WORKED BY ITSELF <img src="assets/img/Aweralogo-White.png" alt="index.html"> -->
     <img src="assets/img/GoldBanner.png" alt="index.html">   
   </iframe>
