--- a/index.html
+++ b/index.html
@@ -1,4 +1,172 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Portfolio | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+
+<!-- Meta Name Description -->
+<meta name="description" content="Awera Surprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
+
+<!-- Meta Keywords -->
+<meta name="keywords" content="awera surprises services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
+
+<!-- Meta Author -->
+<meta name="author" content="Awera Surprises" />
+
+<!-- Extra Meta for SEO and Social Sharing -->
+
+<!-- Google Verification (If applicable) -->
+<meta name="google-site-verification" content="3zB3hDHuTv-_Asex4ZgzyrL2PpS4BdZETNcCVbGsEfY" />
+
+<!-- Mobile Optimization -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:site" content="@awerasurprises" />
+<meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:description" content="Discover Awera Surprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
+
+<!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+<meta property="og:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:site_name" content="Awera Surprises" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.awerasurprises.com/" />
+<meta property="og:description" content="Explore Awera Surprises' 123 Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
+<meta property="article:publisher" content="https://www.facebook.com/awerasurprises/" />
+
+<!-- Structured Data (Schema.org Business) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "name": "Awera Surprises: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "Awera Surprises",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "5833 Fairglen Ave, Fossil Creek",
+      "addressLocality": "Fort Worth",
+      "addressRegion": "TX",
+      "postalCode": "76137",
+      "addressCountry": "US"
+    },
+    "telephone": "254-339-3137",
+    "url": "https://www.awerasurprises.com",
+    "sameAs": [
+      "https://www.facebook.com/awerasurprises",
+      "https://www.instagram.com/awerasurprises"
+    ]
+  },
+  "serviceType": [
+    "Event Planning",
+    "Dallas Event Planner",
+    "Fort Worth Event Planner",
+    "DFW Event Planner",
+    "Event Decorations",
+    "DFW Event Decorator",
+    "Event Decorator",
+    "DFW Balloon Decor",
+    "Dallas Balloon Garland",
+    "Fort Worth Balloon Garland",
+    "DFW Balloon Garland",
+    "Balloon Decor",
+    "DFW Balloon Decorations",
+    "Balloon Decorations",
+    "Balloon Decorator",
+    "DFW Balloon Stylist",
+    "DFW Balloon Artist",
+    "Party Decorations",
+    "DFW Party Decorator",
+    "Dallas Luxury Money Flowers",
+    "Dallas Luxury Money Bouquet",
+    "Dallas Luxury Money Bouquets",
+    "Dallas Luxury Rose Money Flowers",
+    "Dallas Luxury Rose Money Bouquet",
+    "Dallas Luxury Rose Money Bouquets",
+    "Fort Worth Money Flowers",
+    "Fort Worth Money Bouquet",
+    "Fort Worth Money Bouquets",
+    "Fort Worth Luxury Money Flowers",
+    "Fort Worth Luxury Money Bouquet",
+    "Fort Worth Luxury Money Bouquets",
+    "Fort Worth Luxury Rose Money Flowers",
+    "Fort Worth Luxury Rose Money Bouquet",
+    "Fort Worth Luxury Rose Money Bouquets",
+    "Money Flowers",
+    "Money Bouquet",
+    "Money Bouquets",
+    "Luxury Money Flowers",
+    "Luxury Money Bouquet",
+    "Luxury Money Bouquets",
+    "Luxury Rose Money Flowers",
+    "Luxury Rose Money Bouquet",
+    "Luxury Rose Money Bouquets",
+    "Money Flowers",
+    "Money Bouquet",
+    "Money Bouquets",
+    "Rose Money Flowers",
+    "Rose Money Bouquet",
+    "Rose Money Bouquets",
+    "Branded Promotional Products",
+    "Branded Balloons",
+    "Business Balloon Branding",
+    "Corporate Balloon Branding"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Dallas Fort Worth (DFW), Texas"
+  }
+}
+</script>
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.awerasurprises.com" />
+
+<!-- Language and Alternate Links -->
+<link rel="alternate" hreflang="x-default" href="https://www.awerasurprises.com" />
+<link rel="alternate" hreflang="en-us" href="https://www.awerasurprises.com" />
+
+
+  <!-- Extra Meta for SEO and Social Sharing: Stop-->
+
+
+
+
+  
+
+  <!-- Favicons -->
+  <link href="assets/img/Awera Surprises Logo.png" rel="icon">
+  <link href="assets/img/Awera Surprises Logo.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: EstateAgency
+  * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
 
 <body class="about-page">
 
